--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,7 +21,7 @@
     margin-left: 8px;
     margin-right: 6px;
    
-    padding: -14px;
+    /* padding: -14px; */
     font-weight: 600;
     font-size: medium;
 }
